# realmanRobot

./: CMakeLists.txt  package.xml  perfect.usd
config/: joint_names_robot_V10.yaml  joint_names_robot_V26.yaml  robot_v10_cfg.py
doc/: README.md  robot_joint_comparison.md  robot_joint_structure.md  robot_joint_tree_diagram.md  robot_visual_diagram.md
launch/: display.launch  gazebo.launch
meshes/: Link_A1.STL  Link_A2.STL  Link_A3.STL  Link_A4.STL  Link_A5.STL  Link_B1.STL  Link_B2.STL  Link_B3.STL  Link_B4.STL  Link_B5.STL  Link_S1.STL  Link_S2.STL  Link_S3.STL  Link_S4.STL  Link_S5.STL  Link_S6.STL  PD.STL  Sbox1.STL  Sbox2.STL  base2.STL  base3.STL  box_link.STL  bsae4.STL  gripper1_joint_L1.STL  gripper1_joint_L11.STL  gripper1_joint_R1.STL  gripper1_joint_R11.STL  platform_link.STL
package/: package.usd
package/configuration/: package_base.usd  package_physics.usd  package_robot.usd
scripts/: convert_urdf.sh  convert_urdf_in_gui.py  convert_urdf_to_usd.py  load_robot.py  load_robot_isaacsim.py
src/arm_controller/: CMakeLists.txt  README.md  package.xml
src/arm_controller/config/: arm_controller.yaml
src/arm_controller/include/arm_controller/: cubic_spline.hpp  kdl_parser.hpp  kinematics_solver.hpp
src/arm_controller/launch/: arm_controller.launch.py
src/arm_controller/src/: arm_controller_node.cpp  cubic_spline.cpp  kdl_parser.cpp  kinematics_solver.cpp
urdf/: robot_V10.csv  robot_V10.urdf  robot_V13.csv  robot_V13.urdf  robot_V26.csv  robot_V26.urdf
urdf/robot_V10/: robot_V10.usd
urdf/robot_V10/configuration/: robot_V10_physics.usd  robot_V10_robot.usd  robot_V10_sensor.usd
urdf/robot_V26/: robot_V26.usd
urdf/robot_V26/configuration/: robot_V26_physics.usd  robot_V26_robot.usd  robot_V26_sensor.usd
物料建模/: X260131.01 适配器直线版本.STEP  X260131.02 插头1建模.STEP  X260131.03 插头2建模.STEP
